utils/local-deployment/gatewayapi-manifests/gwapi-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  labels:
    istio: kuadrant-system
  name: kuadrant-gwapi-gateway
  namespace: kuadrant-system
spec:
  gatewayClassName: istio
  listeners:
  - name: default
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  addresses:
  - value: kuadrant-gateway.kuadrant-system.svc.cluster.local
    type: Hostname
